<resources>
    <string name="app_name">cita</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your name</string>
    <string name="nav_header_subtitle">user.email@user.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="category_array">
        <item>Cinema</item>
        <item>Events</item>
        <item>Offices</item>
        <item>Recreational facility</item>
        <item>Restaurants</item>
        <item>School</item>
        <item>Sport facility and gyms</item>
        <item>Others</item>
    </string-array>


    <string name="menu_home">Home</string>
    <string name="create_account"> Create an account </string>
    <string name="welcome"> Welcome </string>
    <string name="menu_gallery">Gallery</string>
    <string name="signUp_with"> Or sign up with </string>
    <string name="sign_up"> Sign Up </string>
    <string name="cont"> Continue </string>
    <string name="forgot_password"> Forgot Password? </string>
    <string name="log_header"> Log In</string>
    <string name="userName"> Username</string>
    <string name="new_to_cita"> New to cita? </string>
    <string name="address">Address</string>
    <string name="address_column">Address:</string>
    <string name="phone"> Phone No</string>
    <string name="save"> Save</string>
    <string name="log_in"> Log in</string>
    <string name="email"> Email</string>
    <string name="createNewAccount"> Create new account? </string>
    <string name="forgotPassword"> Forgot Password? </string>
    <string name="password"> Password </string>
    <string name="facilitate"> Sign Up also as Facilitator  </string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_facility_home">FacilityHomeActivity</string>
    <string name="title_activity_facility">FacilityActivity</string>
    <string name="title_activity_organiztaion">OrganiztaionActivity</string>
    <string name="nav_edit_profile">Edit Profile</string>
    <string name="nav_schedule">See schedule</string>
    <string name="nav_gym">Available sport facilities</string>
    <string name="nav_facility">Sign in as facilitator</string>
    <string name="by_registering"> By registering, I accept</string>
    <string name="terms_and_conditions"> the terms of use and policies </string>
    <string name="nav_user_activity">Activity and History</string>
    <string name="settings">Settings</string>
    <string name="already_have_an_account"> Already have an account? </string>
    <string name="log_out">Sign out</string>
    <string name="nav_switch_to_user">Sign in as a user</string>
    <string name="appointment"><![CDATA[Appointment & Schedules]]></string>
    <string name="check_box_facilitate_login">Sign in as facilitator</string>
    <string name="check_box_facilitator_register">Sign up as a Facilitator</string>
    <string name="hint_facility_name">Name of Facility</string>
    <string name="hint_email_address">email address</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_other_equipments">Others not included in the list(Optional)</string>
    <string name="guideline">Guideline</string>
    <string name="activity">Activity</string>
    <string name="for_you">For you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stay_fit">Stay Fit! Stay Safe!</string>
    <string name="stayfit_paragragph">At Cita we aim to help our users use sport facilities and gyms while adhering to the necessary covid-19 guidelines. We have put in place mechanisms for sport facilities to ensure the health and safety of our users. \n Our rules for facilities include:</string>
    <string name="expectation_question">What to expect from us?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_column">email:</string>
    <string name="google"> Google </string>
    <string name="create_an_acount">
        <br> Create \n </br>
        <br>an Account </br>
    </string>
    <string name="full_name"> Full Name </string>
    <string name="recover"> Recover </string>
    <string name="notifications"> Notifications </string>
    <string name="help"> Help &amp; Feedback </string>
    <string name="phone_colon">Phone:</string>
    <string name="overview_colon">Overview:</string>
    <string name="skip"> Skip </string>
    <string name="sign_in"> Sign In</string>
    <string name="get_started"> Get Started </string>
    <string name="capacity_colon">Capacity:</string>
    <string name="others_colon">Others:</string>
    <string name="booking_time_hint">Choose time for booking.</string>
    <string name="booking_date_hint">Choose date for booking.</string>
    <string name="category">CATEGORIES</string>
    <string name="event">EVENTS</string>
</resources>
