<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_profile"
            android:iconTint="@color/light_blue"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/nav_edit_profile" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_gym"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_switch_to_facility"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/nav_facility" />
        <item
            android:id="@+id/nav_facility_activity"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/nav_user_activity" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/help" />
    </group>
</menu>