<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_edit_profile"
            android:iconTint="@color/light_blue"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/nav_edit_profile" />
        <item
            android:id="@+id/nav_schedule"
            android:iconTint="@color/light_blue"
            android:icon="@drawable/ic_baseline_schedule_24"
            android:title="@string/appointment" />
        <item
            android:id="@+id/nav_switch_to_user"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/nav_switch_to_user" />


        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@string/log_out" />
    </group>

</menu>