<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/recover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/light_blue"
        android:layout_marginLeft="25dp"
        android:textSize="35sp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        android:text="@string/recover"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recover"
        android:layout_marginStart="25dp"
        android:textColor="@color/light_blue"
        android:layout_marginLeft="25dp"
        android:textSize="35sp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:textColorHint="#78849E"
        android:textColor="@color/darkblack"
        android:paddingStart="12dp"
        android:background="@drawable/edit_background"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="40dp"
        android:paddingLeft="12dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/nunito"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/recover"
        android:background="@drawable/button_background"/>





</androidx.constraintlayout.widget.ConstraintLayout>